--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-Libraries to install
-
 json
 joblib
 numpy
 scipy
 sklearn
 pandas
-xgboost (optional, the trained model is already included)
+xgboost
 os
